# training

./: .gitignore  ExportReportsCommandRequest  GetBasicInfoAdmin.txt  GetExportedDataListRequest  GetTusInformation.txt  LaunchLds.txt  MainPageInfoContent.txt  README.md  StopLds.txt  SubscribeReportsDataExportedRequest  conftest.py  env.example  exportJournal.yaml  exports response  getExportedFilesList.yaml  part_of_configuration.json  pyproject.toml  reply InputSignalsContent.json  reply SchemeSignalsStateContent.json  reply messagesInfo.json  reply subscribeMainPageSignalsInfoRequest.json  reply.json  request GetMessagesRequest.json  request MainPageSignalsInfoContent.json  request SubscribeSchemeSignalsStateRequest.json  request.json  stop_ms_and_cleanup_redis_and_click.py  subscribeSchemeSignalsState.yaml  uploadExportedFile.yaml  нажатие кнопки скачивания DownloadExportedDataRequest  появляется уведомление ReportDataExportedNotification  само скачивание
clients/: http_client.py  keycloak_clients.py  subprocess_client.py  testops_client.py  websocket_client.py
constants/: architecture_constants.py  enums.py  test_constants.py  test_dataclasses.py  test_enums.py
docs/: confluence_devs.md  confluence_users.md  presentation_45min.md
infra/: clickhouse_manager.py  cmd_generator.py  configuration_manager.py  docker_manager.py  imitator_data_uploader.py  imitator_manager.py  path_generator.py  redis_manager.py  signal_unit_conversion_manager.py  stand_setup_manager.py
models/: basic_info_model.py  export_journal_model.py  export_reports_model.py  main_page.py  (+11 more)
(+60 files in other folders)
