[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest-asyncio = "^1.3.0"
black = "24.2.0"
isort = "5.13.2"
flake8 = "6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
